--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       Home
     </title>
     
+    <link rel="stylesheet" type="text/css" href="Styles/GlobalLayout.css?v=1"
+    
   </header>
   
   
