--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       Home
     </title>
     
-    <link rel="stylesheet" type="text/css" href="Styles/GlobalLayout.css?v=1"
+    <link rel="stylesheet" type="text/css" href="Styles/GlobalLayout.css?v=1" />
     
   </header>
   
